Restructure project and add ablation study analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,43 @@
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
-env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
 venv/
-.venv/
-pip-log.txt
-pip-delete-this-directory.txt
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.pytest_cache/
+ENV/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Dataset and Large Files
-# Excluding the dataset it should be downloaded (see README)
+# Dataset (large - must be downloaded separately)
 dataset/
-weights/final/
+
+# Jupyter Checkpoints
+.ipynb_checkpoints/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.log
+*.tmp
